--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://pravat11.github.io/chitchat/",
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "pusher-js": "^4.2.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -27,17 +28,18 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0",
     "@types/jest": "^23.3.0",
+    "@types/lodash": "^4.14.115",
     "@types/node": "^10.5.2",
+    "@types/pusher-js": "^4.2.0",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "@types/pusher-js": "^4.2.0",
     "@types/react-redux": "^6.0.5",
     "@types/recompose": "^0.26.2",
     "@types/redux-actions": "^2.3.0",
     "@types/redux-form": "^7.4.3",
     "@types/redux-promise-middleware": "^0.0.10",
+    "gh-pages": "^1.2.0",
     "typescript": "^2.9.2"
   }
 }
