--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://pravat11.github.io/chitchat/",
   "dependencies": {
+    "@types/redux-persist": "^4.3.1",
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "pusher-js": "^4.2.2",
@@ -15,6 +16,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "redux-form": "^7.4.2",
+    "redux-persist": "^5.10.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "tslint-consistent-codestyle": "^1.13.2"
