--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "homepage": "https://pravat11.github.io/chitchat/",
   "dependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/redux-persist": "^4.3.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "pusher-js": "^4.2.2",
     "react": "^16.4.1",
